Addition of view models
